# professor-pendo

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/PENDO-SKILLS/aggregation-builder/: SKILL.md
.agents/PENDO-SKILLS/aggregation-builder/resources/: operators.md
.agents/PENDO-SKILLS/aggregation-builder/scripts/: run_aggregation.py
.agents/PENDO-SKILLS/css-selector-stability/: SKILL.md
.agents/PENDO-SKILLS/feature-naming/: SKILL.md
.agents/PENDO-SKILLS/get-pendo-feature-rules/: SKILL.md
.agents/PENDO-SKILLS/get-pendo-feature-rules/scripts/: fetch_features.py
.agents/PENDO-SKILLS/page-naming/: SKILL.md
.agents/SKILLS/contributing/: SKILL.md
.agents/SKILLS/contributing/pendo-skill-registry/: SKILL.md
.agents/SKILLS/pendo/: SKILL.md
.agents/SKILLS/pendo/pendo-aggregation-builder/: SKILL.md
.agents/SKILLS/pendo/pendo-aggregation-builder/resources/: aggregators-and-expressions.md  examples.md  operators.md  sources-and-timeseries.md
.agents/SKILLS/pendo/pendo-aggregation-builder/scripts/: run_aggregation.py
.agents/SKILLS/pendo/pendo-docs/: SKILL.md
.agents/SKILLS/pendo/pendo-docs/references/: doc-map.md  engage-api.md  help-center.md  mobile-sdk.md  web-sdk.md
.agents/SKILLS/pendo/pendo-feature-naming-convention/: SKILL.md
.agents/SKILLS/pendo/pendo-feature-rule-quality/: SKILL.md
.agents/SKILLS/pendo/pendo-page-naming-convention/: SKILL.md
.github/: CONTRIBUTING.md
scripts/: install-professor-pendo.py
src/professor_pendo/: api.py  types.py  utils.py
(+3 files in other folders)
