[project]
name = "professor-pendo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.14"
dependencies = [
    "niquests>=3.18.2",
    "structlog>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cyclopts>=4.10.1",
    "python-dotenv>=1.2.2",
]
