[project]
name = "professor-pendo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.14"
dependencies = [
    "niquests>=3.18.2",
    "structlog>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cyclopts>=4.10.1",
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=2.0.10",
    "mdformat-gfm>=1.0.0",
    "prek>=0.3.8",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.format]
docstring-code-format = true

# Used by mdformat (CLI and prek hook); keep near Ruff line-length when possible.
[tool.mdformat]
wrap = 88
